--- a/styles/header.css
+++ b/styles/header.css
@@ -16,4 +16,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative 
 }
+
+.container{
+      display: flex;
+      align-items: center
+}
+
+.container__image { 
+   padding:
